# octotools-v1

./: .env.template  init_setup.sh  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  trial.py
octotools/engine/: groq.py  openai.py
octotools/models/: executor.py  planner.py
octotools/tools/generalist_solution_generator/: tool.py
octotools/tools/image_captioner/: tool.py
octotools/tools/python_code_generator/: tool.py
octotools/tools/relevant_patch_zoomer/: tool.py
